test/good/t0051.ls
(*
  Test of dead code elimination.
  Removal of a stateful local variable.
 *)

let node main () = x where
  automaton
  | S1 -> local v in
      do
        v = 3 fby 4
        and x = 1
      done
  | S2 -> do x = 2 done

