test/bad/t0017.ls
(*
    This program should be rejected because it does not define a value for o
    when x is not present.
 *)
let node main x = o where
  present
  |  x() -> do o = 1 done

